compiler/src/snapshots/arachne_compiler__compiler__tests__r#if__compile_function_with_zero_argument.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"if\".into(), 1.0.into(), 42.0.into(), 13.0.into()].into()]).await"
---
symbol 2 "if"
float64 1
float64 42
float64 13
call 3
dump
drop
