compiler/src/snapshots/arachne_compiler__compiler__tests__r#if__compile_two_branches_without_else.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"if\".into(), 1.0.into(), 2.0.into(), 3.0.into(),\n                            4.0.into()].into()]).await"
---
float64 1
branch f
float64 3
branch b
nil
jump d
float64 4
jump 11
float64 2
dump
drop
