compiler/src/snapshots/arachne_compiler__compiler__tests__r#if__compile_without_else.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"if\".into(), 1.0.into(), 42.0.into()].into()]).await"
---
float64 1
branch c
float64 42
jump 1
nil
dump
drop
